feat: implement users, boards, tasks API

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -23,7 +23,8 @@
             "restParams": true,
             "spread": true,
             "superInFunctions": true,
-            "templateStrings": true
+            "templateStrings": true,
+            "sourceType": "module"
         }
     },
     "extends": [
