fix: feat: task3 mongodb to correct repo

--- a/.env
+++ b/.env
@@ -3,4 +3,4 @@ PORT=4000
 AUTH_MODE=false
 JWT_SECRET_KEY=secret-key
 # Set your database connection information here
-MONGO_CONNECTION_STRING=your-mongo-db-connection-string
+MONGO_CONNECTION_STRING="mongodb+srv://ognatenko:6UINSLzpTC4h0vGI@cluster0.s48rd.mongodb.net/nodejs-rest-api?retryWrites=true&w=majority"
