--- a/.env
+++ b/.env
@@ -1,6 +1,7 @@
 NODE_ENV=development
 PORT=4000
 AUTH_MODE=false
-JWT_SECRET_KEY=secret-key
 # Set your database connection information here
 MONGO_CONNECTION_STRING="mongodb+srv://ognatenko:6UINSLzpTC4h0vGI@cluster0.s48rd.mongodb.net/nodejs-rest-api?retryWrites=true&w=majority"
+JWT_SECRET_KEY = $2b$10$.x2mB3Q652i2SSbXwSY8ee
+PASSWORD_SECRET_KEY = $2b$10$.4D4nrPbo7/mKbItp9coIe
