--- a/.env.example
+++ b/.env.example
@@ -1,7 +1,8 @@
 NODE_ENV=development
 PORT=4000
 AUTH_MODE=false
-JWT_SECRET_KEY=secret-key
+JWT_SECRET_KEY = jwt-secret-key
 # Set your database connection information here
 MONGO_CONNECTION_STRING=your-mongo-db-connection-string
 # note: this is NOT actual .env file, but just an example of actual .env structure 
+PASSWORD_SECRET_KEY = password-secret-key
